--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ body{
     display: none;
 }
 .hero-para{
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin: auto;
 }
 
@@ -44,7 +44,7 @@ body{
     pointer-events: none;
 }
 .website-title{
-    font-size: 4.5rem;    
+    font-size: 5rem;    
 }
 .unable{
     display: none
@@ -141,11 +141,14 @@ body{
 .btn-link{
     text-decoration: none;
     font-weight: bold;
-    color: #14272E;
-    transition: 00.4s all;
 }
 .btn-link:hover{
-    color:#0d6efd;
+    color: var(--b#0d6efd);
+    text-decoration: underline;
+}
+.btn-outline-primary{
+    background-color: white;
+    
 }
 .btn-wheat{
     border:2px solid wheat;
@@ -223,6 +226,15 @@ a.user-icon-a {
 
 .know-more:hover{
     box-shadow: none;
+}
+.font-roboto{
+    font-family: 'Roboto Condensed', sans-serif;
+}
+.font-bold{
+    font-weight: bold;
+}
+.link{
+
 }
 /*----------------- Scroll-bar -*/
 /* width */
