--- a/public/css/style.css
+++ b/public/css/style.css
@@ -136,8 +136,8 @@ body{
 }
 .go-up-arrow{
     position: fixed;
-    height: 3rem;
-    width: 3rem;
+    height: 50px;
+    width: 50px;
     bottom: 5rem;
     right: 6vw;
     background-color: var(--nav-bg-color);
