--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,8 +78,10 @@ body{
     font-weight: bold;
 }
 .card:hover{
+    box-shadow: 0px 0px 5px rgb(163, 163, 163);
     border: 1px solid rgb(0, 6, 31);
     transition: 0.5s all;
+
 }
 .link{
     cursor: pointer;
